Update telegram bot service. The method of obtaining objects from the request URL has been slightly reworked. Expanded variation in responses from the server when switching polling-webhook modes.