@@ -9,22 +9,24 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class JSONModelObjectParser {
 
     @Contract("_ -> new")
     public static @NotNull JSONObject getObject(@NotNull String urlRequest) throws IOException {
-        final URL url = new URL(urlRequest);
-        final BufferedReader in = new BufferedReader(new InputStreamReader((InputStream) url.getContent()));
-        final StringBuilder result = new StringBuilder();
+        final URL url = URI.create(urlRequest).toURL();
 
-        String serverResponse;
-        while ((serverResponse = in.readLine()) != null) {
-            result.append(serverResponse);
+        String result;
+        try (BufferedReader in = new BufferedReader(
+                new InputStreamReader((InputStream) url.getContent(), StandardCharsets.UTF_8))) {
+            result = in.lines().collect(Collectors.joining());
         }
 
-        return new JSONObject(result.toString());
+        return new JSONObject(result);
     }
 }
